# Govt-Autofiller-Multiagent

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  SPEC-PHASE1.md  SPEC-PHASE2.md  SPEC-PHASE3.md  SPEC-PHASE4.md  SPEC-PHASE5.md  SPEC-PHASE6.md  SPEC.md  docker-compose.yml  govform-autofiller-prd.md
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: graph.py  state.py
backend/app/agent/tools/: confidence_scorer_tool.py  document_verification_tool.py  field_mapping_tool.py  form_schema_tool.py  profile_lookup_tool.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  documents.py  forms.py  history.py  metrics.py  profile.py
backend/app/core/: encryption.py  logging.py  security.py  validators.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial_auth.py  0002_profile_ingestion.py  0003_forms.py  0004_verification_review.py  0005_schema_inference.py  0006_metrics.py
backend/app/metrics/: instrumentation.py
backend/app/models/: document.py  email_verification_token.py  form.py  metrics.py  profile.py  refresh_token.py  user.py
backend/app/schemas/: __init__.py  auth.py  document.py  form.py  history.py  metrics.py  profile.py  user.py
backend/app/services/: email.py  extraction.py  form_renderer.py  image_quality.py  preprocessing.py  storage.py
backend/app/services/email_templates/: verify.html
backend/app/services/form_placement/: document_ai.py
backend/app/services/ocr/: tesseract.py  vision_llm.py
backend/app/templates/: income_certificate.json  scholarship_application.json
backend/app/workers/: celery_app.py  tasks.py
backend/scripts/: eval_accuracy.py
backend/tests/: conftest.py  test_agent_graph.py  test_auth.py  test_confidence_scorer.py  test_document_ai.py  test_document_verification_tool.py  test_documents_api.py  test_encryption.py  test_extraction.py  test_field_mapping_tool.py  test_fill_form_task.py  test_form_renderer.py  test_form_schema_tool.py  test_forms_api.py  test_health.py  test_history_api.py  test_image_quality.py  test_instrumentation.py  test_metrics_api.py  test_models_form.py  test_models_metrics.py  test_models_profile.py  test_ocr_task.py  test_preprocessing.py  test_profile_api.py  test_profile_lookup_tool.py  test_security.py  test_storage.py  test_validators.py  test_vision_llm.py  test_worker_import_graph.py
backend/tests/fixtures/eval/: manifest.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  styles.css
frontend/src/api/: client.test.ts  client.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: ConfidenceField.test.tsx  ConfidenceField.tsx
frontend/src/pages/: FormFill.test.tsx  FormFill.tsx  History.test.tsx  History.tsx  Login.tsx  Metrics.test.tsx  Metrics.tsx  Profile.test.tsx  Profile.tsx  Register.tsx  Review.test.tsx  Review.tsx  Upload.test.tsx  Upload.tsx  Verify.tsx
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
