[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "govform-autofiller"
version = "0.1.0"
description = "Autonomous government form auto-filler agent (backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "psycopg[binary]",
    "alembic",
    "celery[redis]",
    "redis",
    "boto3",              # S3 / MinIO
    "langgraph",
    "anthropic",          # vision-LLM (primary OCR/extraction)
    "pytesseract",        # fallback OCR for clean typed docs
    "pillow",
    "pypdf",
    "python-jose[cryptography]",  # JWT
    "bcrypt",                     # password hashing (used directly; passlib is unmaintained)
    "cryptography",               # field-level PII encryption
    "python-multipart",           # file uploads
    "email-validator",            # pydantic EmailStr
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "ruff", "mypy"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
