[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "govform-autofiller"
version = "0.1.0"
description = "Autonomous government form auto-filler agent (backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "psycopg[binary]",
    "alembic",
    "celery[redis]",
    "redis",
    "boto3",              # S3 / MinIO
    "langgraph",
    "google-genai",       # vision-LLM (primary OCR/extraction, Gemini)
    "pytesseract",        # fallback OCR for clean typed docs
    "pillow",
    "pillow-heif",        # HEIC/HEIF (mobile camera) -> JPEG conversion
    "pypdf",
    "pymupdf",             # form_renderer.py: AcroForm fill + template-coordinate overlay (Phase 3)
    "opencv-python-headless",  # services/image_quality.py: skew/rotation sanity check (Phase 3)
    "numpy",
    "python-jose[cryptography]",  # JWT
    "bcrypt",                     # password hashing (used directly; passlib is unmaintained)
    "cryptography",               # field-level PII encryption
    "python-multipart",           # file uploads
    "email-validator",            # pydantic EmailStr
    "google-cloud-documentai",    # Phase-4-activated: form-parser field-detection fallback; unused in Phase 3
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "ruff", "mypy", "moto[s3]"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = ["celery.*", "boto3.*", "botocore.*", "pillow_heif.*", "fitz.*", "cv2.*", "google.cloud.documentai.*"]
ignore_missing_imports = true
